updated GBQ file to capture the need for your own project IDs and dataset IDs

--- a/python-gbq/Python GBQ Example.ipynb
+++ b/python-gbq/Python GBQ Example.ipynb
@@ -30,11 +30,11 @@
    "source": [
     "# These first two values will be different on your machine. \n",
     "service_path = \"C:\\\\users\\\\jchan\\\\dropbox\\\\teaching\\\\\"\n",
-    "service_file = 'UMT-MSBA-7b4265df0ca4.json' # this is your authentication information  \n",
+    "service_file = 'UMT-MSBA-7b4265df0ca4.json' # change this to your authentication information  \n",
+    "gbq_proj_id = 'umt-msba' # change this to your poroject. \n",
     "\n",
-    "# And these stay the same. \n",
-    "private_key =service_path + service_file\n",
-    "gbq_proj_id = 'umt-msba'"
+    "# And this should stay the same. \n",
+    "private_key =service_path + service_file"
    ]
   },
   {
@@ -77,6 +77,7 @@
    "outputs": [],
    "source": [
     "# An example query. This uses a trick that Python concatenates adjacent string literals for you.\n",
+    "# Note, you'll need to update the project_id and dataset_id in the query below (and throughout)\n",
     "query = (\n",
     "    \"SELECT card_no, sum(total) as TotalSales \"\n",
     "    \"FROM `umt-msba.wedge_example.transactions_201307_small` \"\n",
@@ -151,7 +152,7 @@
     "# You should have data in the file that you can see via the console. Let's test it here.\n",
     "query = (\n",
     "    \"SELECT * \"\n",
-    "    \"FROM `umt-msba.wedge_example.chandler_test1` \" # change to *your*` table name! \n",
+    "    \"FROM `umt-msba.wedge_example.chandler_test1` \" # change to *your*` project ID, data set ID, and table name! \n",
     ")\n",
     "\n",
     "results = client.query(query)\n",
@@ -187,7 +188,7 @@
     "\n",
     "query = (\n",
     "    \"SELECT * \"\n",
-    "    \"FROM `umt-msba.wedge_example.chandler_test2` \" # change your table name! \n",
+    "    \"FROM `umt-msba.wedge_example.chandler_test2` \" # change to *your*` project ID, data set ID, and table name!\n",
     ")"
    ]
   },
@@ -277,7 +278,7 @@
     "# You should have data in the file that you can see via the console. Let's test it here.\n",
     "query = (\n",
     "    \"SELECT * \"\n",
-    "    \"FROM `umt-msba.wedge_example.chandler_test2` \" # change to *your*` table name! \n",
+    "    \"FROM `umt-msba.wedge_example.chandler_test2` \" # change to *your*` project ID, data set ID, and table name! \n",
     ")\n",
     "\n",
     "results = client.query(query)\n",
