a few tweaks before class

--- a/python-file-exploration/File Testing - Solutions.ipynb
+++ b/python-file-exploration/File Testing - Solutions.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,9 +32,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['file1.zip',\n",
+       " 'file2.zip',\n",
+       " 'file3.zip',\n",
+       " 'file4.zip',\n",
+       " 'file5.zip',\n",
+       " 'file_6_7.zip']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "os.listdir(\"data/\")"
    ]
@@ -48,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,14 +101,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File Name                                             Modified             Size\n",
+      "file6.csv                                      2018-09-17 18:18:58         4028\n",
+      "file7.csv                                      2018-09-17 18:18:58         4097\n",
+      "Extracting all the files now...\n",
+      "Done!\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's extract one file from the first zip in our list\n",
     "\n",
     "# opening the zip file in READ mode \n",
-    "with ZipFile(\"data/\" + zip_files[0], 'r') as zf : \n",
+    "with ZipFile(\"data/\" + zip_files[5], 'r') as zf : \n",
     "    # printing what's in the zip file.  \n",
     "    zf.printdir() \n",
     "  \n",
