--- a/python-gbq/Python GBQ Example.ipynb
+++ b/python-gbq/Python GBQ Example.ipynb
@@ -131,7 +131,7 @@
    "source": [
     "#### Uploading Manually\n",
     "\n",
-    "This is the easist way, but it only works for small files. Go to the console, and click on our project, `umt-msba`, and then on our dataset, `wedge_example`. You'll see a blue \"+\" sign (in the new UI). Click on that and it will open a \"create table\" prompt. \n",
+    "This is the easist way, but it only works for small files. Go to the console, and click on your project (the one that you replaced `umt-msba` with in the above) and then on your dataset (like `wedge_example`). You'll see a blue \"+\" sign (in the new UI). Click on that and it will open a \"create table\" prompt. \n",
     "\n",
     "Once that's open, here are the options to choose as you go down: \n",
     "\n",
@@ -167,7 +167,7 @@
     "\n",
     "Now we'll do something similar. We'll create the table manually but upload the data programmatically.  \n",
     "\n",
-    "So go through similar steps to create the table via the console. Click on our project, `umt-msba`, and then on our dataset, `wedge_example`, and then click on the create table plus sign again. This opens the \"create table\" prompt. \n",
+    "So go through similar steps to create the table via the console. Open up the \"create table\" prompt. \n",
     "\n",
     "Once that's open, here are the options to choose as you go down: \n",
     "\n",
