API commit before class

--- a/python-file-exploration/File Testing - Solutions.ipynb
+++ b/python-file-exploration/File Testing - Solutions.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        " 'file_6_7.zip']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -139,9 +139,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['file1.csv']\n"
+     ]
+    }
+   ],
    "source": [
     "with ZipFile(\"data/\" + zip_files[0], 'r') as zf :\n",
     "    print(zf.namelist())"
@@ -158,12 +166,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Now let's delete that spurious file we created\n",
-    "with ZipFile(\"data/\" + zip_files[0], 'r') as zf :\n",
+    "with ZipFile(\"data/\" + zip_files[5], 'r') as zf :\n",
     "    this_file_list = zf.namelist()\n",
     "    os.remove(this_file_list[0])"
    ]
@@ -179,9 +187,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['file1.csv']\n",
+      "['file2.csv']\n",
+      "['file3.csv']\n",
+      "['file4.csv']\n",
+      "['file5.csv']\n",
+      "['file6.csv', 'file7.csv']\n"
+     ]
+    }
+   ],
    "source": [
     "for zipf in zip_files :\n",
     "    with ZipFile(\"data/\" + zipf,'r') as zf :  \n",
@@ -205,9 +226,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'\"Sepal.Length\"\\t\"Sepal.Width\"\\t\"Petal.Length\"\\t\"Petal.Width\"\\t\"Species\"\\r\\n'\n",
+      "b'5.1\\t3.5\\t1.4\\t0.2\\t\"setosa\"\\r\\n'\n",
+      "b'4.9\\t3\\t1.4\\t0.2\\t\"setosa\"\\r\\n'\n",
+      "b'4.7\\t3.2\\t1.3\\t0.2\\t\"setosa\"\\r\\n'\n",
+      "b'4.6\\t3.1\\t1.5\\t0.2\\t\"setosa\"\\r\\n'\n",
+      "b'5\\t3.6\\t1.4\\t0.2\\t\"setosa\"\\r\\n'\n",
+      "b'5.4\\t3.9\\t1.7\\t0.4\\t\"setosa\"\\r\\n'\n"
+     ]
+    }
+   ],
    "source": [
     "this_zf = zip_files[0]\n",
     "\n",
@@ -477,7 +512,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
