some new twitter stuff.

--- a/apis/Wikipedia/Wikipedia API-Full.ipynb
+++ b/apis/Wikipedia/Wikipedia API-Full.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,13 +319,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We pulled 5 pages for 1850.\n",
+      "We pulled 5 pages for 1851.\n",
+      "We pulled 5 pages for 1852.\n",
+      "We pulled 4 pages for 1853.\n",
+      "We pulled 5 pages for 1854.\n",
+      "We pulled 5 pages for 1855.\n",
+      "We pulled 5 pages for 1856.\n",
+      "We pulled 5 pages for 1857.\n",
+      "We pulled 6 pages for 1858.\n",
+      "We pulled 6 pages for 1859.\n",
+      "We pulled 6 pages for 1860.\n",
+      "We pulled 6 pages for 1861.\n",
+      "We pulled 6 pages for 1862.\n",
+      "We pulled 6 pages for 1863.\n",
+      "We pulled 6 pages for 1864.\n",
+      "We pulled 6 pages for 1865.\n",
+      "We pulled 6 pages for 1866.\n",
+      "We pulled 7 pages for 1867.\n",
+      "We pulled 7 pages for 1868.\n",
+      "We pulled 7 pages for 1869.\n",
+      "We pulled 7 pages for 1870.\n",
+      "We pulled 7 pages for 1871.\n",
+      "We pulled 7 pages for 1872.\n",
+      "We pulled 7 pages for 1873.\n",
+      "We pulled 7 pages for 1874.\n",
+      "We pulled 7 pages for 1875.\n",
+      "We pulled 8 pages for 1876.\n",
+      "We pulled 7 pages for 1877.\n",
+      "We pulled 8 pages for 1878.\n",
+      "We pulled 8 pages for 1879.\n",
+      "We pulled 8 pages for 1880.\n",
+      "We pulled 8 pages for 1881.\n",
+      "We pulled 9 pages for 1882.\n",
+      "We pulled 9 pages for 1883.\n",
+      "We pulled 9 pages for 1884.\n",
+      "We pulled 9 pages for 1885.\n",
+      "We pulled 9 pages for 1886.\n",
+      "We pulled 9 pages for 1887.\n",
+      "We pulled 10 pages for 1888.\n",
+      "We pulled 10 pages for 1889.\n",
+      "We pulled 10 pages for 1890.\n",
+      "We pulled 10 pages for 1891.\n",
+      "We pulled 10 pages for 1892.\n",
+      "We pulled 10 pages for 1893.\n",
+      "We pulled 10 pages for 1894.\n",
+      "We pulled 10 pages for 1895.\n",
+      "We pulled 10 pages for 1896.\n",
+      "We pulled 10 pages for 1897.\n",
+      "We pulled 11 pages for 1898.\n",
+      "We pulled 10 pages for 1899.\n",
+      "We pulled 11 pages for 1900.\n",
+      "We pulled 11 pages for 1901.\n",
+      "We pulled 11 pages for 1902.\n",
+      "We pulled 12 pages for 1903.\n",
+      "We pulled 12 pages for 1904.\n",
+      "We pulled 12 pages for 1905.\n",
+      "We pulled 12 pages for 1906.\n",
+      "We pulled 12 pages for 1907.\n",
+      "We pulled 13 pages for 1908.\n",
+      "We pulled 13 pages for 1909.\n",
+      "We pulled 13 pages for 1910.\n",
+      "We pulled 13 pages for 1911.\n",
+      "We pulled 14 pages for 1912.\n",
+      "We pulled 13 pages for 1913.\n",
+      "We pulled 14 pages for 1914.\n",
+      "We pulled 13 pages for 1915.\n",
+      "We pulled 13 pages for 1916.\n",
+      "We pulled 13 pages for 1917.\n",
+      "We pulled 13 pages for 1918.\n",
+      "We pulled 13 pages for 1919.\n",
+      "We pulled 16 pages for 1920.\n",
+      "We pulled 16 pages for 1921.\n",
+      "We pulled 15 pages for 1922.\n",
+      "We pulled 16 pages for 1923.\n",
+      "We pulled 16 pages for 1924.\n",
+      "We pulled 16 pages for 1925.\n",
+      "We pulled 17 pages for 1926.\n",
+      "We pulled 17 pages for 1927.\n",
+      "We pulled 17 pages for 1928.\n",
+      "We pulled 17 pages for 1929.\n",
+      "We pulled 18 pages for 1930.\n",
+      "We pulled 17 pages for 1931.\n",
+      "We pulled 17 pages for 1932.\n",
+      "We pulled 16 pages for 1933.\n",
+      "We pulled 17 pages for 1934.\n",
+      "We pulled 17 pages for 1935.\n",
+      "We pulled 18 pages for 1936.\n",
+      "We pulled 18 pages for 1937.\n",
+      "We pulled 19 pages for 1938.\n",
+      "We pulled 19 pages for 1939.\n",
+      "We pulled 20 pages for 1940.\n",
+      "We pulled 20 pages for 1941.\n",
+      "We pulled 22 pages for 1942.\n",
+      "We pulled 23 pages for 1943.\n",
+      "We pulled 23 pages for 1944.\n",
+      "We pulled 22 pages for 1945.\n",
+      "We pulled 25 pages for 1946.\n",
+      "We pulled 27 pages for 1947.\n",
+      "We pulled 26 pages for 1948.\n",
+      "We pulled 25 pages for 1949.\n",
+      "We pulled 25 pages for 1950.\n",
+      "We pulled 25 pages for 1951.\n",
+      "We pulled 26 pages for 1952.\n",
+      "We pulled 25 pages for 1953.\n",
+      "We pulled 26 pages for 1954.\n",
+      "We pulled 26 pages for 1955.\n",
+      "We pulled 26 pages for 1956.\n",
+      "We pulled 26 pages for 1957.\n",
+      "We pulled 26 pages for 1958.\n",
+      "We pulled 26 pages for 1959.\n",
+      "We pulled 26 pages for 1960.\n",
+      "We pulled 26 pages for 1961.\n",
+      "We pulled 26 pages for 1962.\n",
+      "We pulled 26 pages for 1963.\n",
+      "We pulled 27 pages for 1964.\n",
+      "We pulled 26 pages for 1965.\n",
+      "We pulled 25 pages for 1966.\n",
+      "We pulled 26 pages for 1967.\n",
+      "We pulled 26 pages for 1968.\n",
+      "We pulled 27 pages for 1969.\n",
+      "We pulled 28 pages for 1970.\n",
+      "We pulled 28 pages for 1971.\n",
+      "We pulled 27 pages for 1972.\n",
+      "We pulled 27 pages for 1973.\n",
+      "We pulled 27 pages for 1974.\n",
+      "We pulled 27 pages for 1975.\n",
+      "We pulled 27 pages for 1976.\n",
+      "We pulled 27 pages for 1977.\n",
+      "We pulled 28 pages for 1978.\n",
+      "We pulled 29 pages for 1979.\n",
+      "We pulled 29 pages for 1980.\n",
+      "We pulled 31 pages for 1981.\n",
+      "We pulled 31 pages for 1982.\n",
+      "We pulled 31 pages for 1983.\n",
+      "We pulled 32 pages for 1984.\n",
+      "We pulled 33 pages for 1985.\n",
+      "We pulled 34 pages for 1986.\n",
+      "We pulled 33 pages for 1987.\n",
+      "We pulled 34 pages for 1988.\n",
+      "We pulled 34 pages for 1989.\n",
+      "We pulled 33 pages for 1990.\n",
+      "We pulled 31 pages for 1991.\n",
+      "We pulled 30 pages for 1992.\n",
+      "We pulled 29 pages for 1993.\n",
+      "We pulled 27 pages for 1994.\n",
+      "We pulled 24 pages for 1995.\n",
+      "We pulled 21 pages for 1996.\n",
+      "We pulled 18 pages for 1997.\n",
+      "We pulled 15 pages for 1998.\n",
+      "We pulled 11 pages for 1999.\n",
+      "We pulled 8 pages for 2000.\n",
+      "We pulled 4 pages for 2001.\n",
+      "We pulled 2 pages for 2002.\n",
+      "We pulled 1 pages for 2003.\n",
+      "We pulled 1 pages for 2004.\n",
+      "We pulled 1 pages for 2005.\n",
+      "We pulled 1 pages for 2006.\n",
+      "We pulled 1 pages for 2007.\n",
+      "We pulled 1 pages for 2008.\n",
+      "We pulled 1 pages for 2009.\n",
+      "We pulled 1 pages for 2010.\n",
+      "We pulled 1 pages for 2011.\n",
+      "We pulled 1 pages for 2012.\n",
+      "We pulled 1 pages for 2013.\n",
+      "We pulled 1 pages for 2014.\n",
+      "We pulled 1 pages for 2015.\n",
+      "We pulled 1 pages for 2016.\n",
+      "We pulled 1 pages for 2017.\n",
+      "We pulled 1 pages for 2018.\n"
+     ]
+    }
+   ],
    "source": [
     "# In this section, we'll pull everyone on Wikipedia from 1850 onward. \n",
     "\n",
-    "years = range(1850,1855) #2019)\n",
+    "years = range(1850,2019)\n",
     "output_file = \"wikipedia_famous.txt\"\n",
     "\n",
     "with open(output_file,'w',encoding=\"UTF-8\") as ofile :\n",
@@ -381,6 +557,13 @@
     "        for name in names :\n",
     "            ofile.write(\"\\t\".join([str(year),name]) + \"\\n\")\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "More later on estimating the age effect in Wikipedia!"
    ]
   }
  ],
