--- a/dplyr/dplyr_tutorial_pt2.Rmd
+++ b/dplyr/dplyr_tutorial_pt2.Rmd
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: dplyr Introduction
+title: dplyr Introduction - Part 2
 ---
 
 ```{r options, echo=FALSE,message=F}
@@ -9,6 +9,7 @@ library(DBI)
 library(scales)
 library(bigrquery)
 library(lubridate)
+library(dbplyr)
 ```
 
 ## What is dplyr?
@@ -19,7 +20,7 @@ dplyr package vignette: [Introduction to dplyr](http://cran.rstudio.com/web/pack
 
 In order to get the code in this notebook to run, you need to 
 run the following to install the packages that you might not have. Run this
-in your R-Studio console: `install.packages("tidyverse","bigrquery","lubridate", "DBI","scales","RSQLite","dbplyr")`.
+in your R-Studio console: `install.packages(c("tidyverse","bigrquery","lubridate", "DBI","scales","RSQLite","dbplyr"))`.
 
 Finally, [here's](https://stat545.com/dplyr-intro.html) 
 a great resource I found on `dplyr` that might useful. 
@@ -285,6 +286,182 @@ owner.prod.d %>%
 ```
 
 Pretty cool, right? 
+
+## Moving to DBs
+
+Okay, now here's where we see the real power of this. Let's connect to 
+our DB instead of our text files. Here we'll have to specify the 
+full path, so please modify the first line of code below to take us
+to the DB. There's a lot of 
+documentation [here](https://db.rstudio.com/dplyr/). 
+
+```{r}
+path.to.db <- paste0("C:\\Users\\jchan\\Dropbox\\",
+                     "Teaching\\AppliedDataAnalytics\\",
+                     "applied-data-analytics\\dplyr\\")
+
+# Creating the connection to the DB. Similar to 
+# a cursor. 
+con <- dbConnect(RSQLite::SQLite(),
+                 dbname=paste0("dplyr_example.db"))
+
+# Listing the tables
+dbListTables(con)
+
+# And creating connections to the two tables. 
+owner.prod.db <- tbl(con, "owner_products")
+prod.ym.db <- tbl(con,"product_year_month_2014")
+```
+
+At this point we've created a connection to the DB and used the `tbl`
+function to create connnections to two tables (that are the same as 
+the text files) in the data set. 
+
+Remember back above where we queried the data.frame `owner.prod.d` to 
+get a handful of columns and filter for `total_sales` between \$100
+and \$500? We can do almost *exactly* the same thing by just changing
+the name from `owner.prod.d` to `owner.prod.db`, the name we gave 
+to the table. 
+
+```{r}
+owner.prod.db %>% 
+    select(owner,description,dept_name,total_sales, transactions) %>% 
+    filter(100 < total_sales, total_sales < 500) %>% 
+    arrange(transactions, total_sales) %>% 
+    head
+```
+
+That's pretty cool. Another thing that's cool is that you can chain
+some `dplyr` verbs together and see the SQL that's actually running 
+under the hood. First, a simple example: 
+
+```{r}
+owner.prod.db %>% 
+    select(owner,description,dept_name,total_sales, transactions) %>% 
+    show_query()
+```
+
+And now a more complicated version: 
+
+```{r}
+owner.prod.db %>% 
+    select(owner,description,dept_name,total_sales, transactions) %>% 
+    filter(100 < total_sales, total_sales < 500) %>% 
+    arrange(transactions, total_sales) %>% 
+    show_query()
+```
+
+There are some subtleties. For instance, `owner` 12872 spends a lot. Let's
+look at how many product rows we have in the local R data.frame:
+
+```{r}
+owner.prod.d %>% 
+    filter(owner==12872) %>% 
+    nrow
+# 3048 rows
+```
+
+Now let's try the same thing in the DB version. 
+```{r}
+owner.prod.db %>% 
+    filter(owner==12872) %>% 
+    nrow
+# Returns NA
+```
+
+Why do we get an NA here? Here's a relevant section from the 
+documentation above:
+
+> The most important difference between ordinary data frames and remote database queries is that your R code is translated into SQL and executed in the database, not in R. When working with databases, dplyr tries to be as lazy as possible:
+> 
+> It never pulls data into R unless you explicitly ask for it.
+> 
+> It delays doing any work until the last possible moment: it collects together everything you want to do and then sends it to the database in one step.
+
+This allows you to test your code, but when you're ready to _work_ 
+with the data in R, then you'll use `collect` to pull the data back 
+from the database. 
+
+```{r}
+owner.prod.db %>% 
+    filter(owner==12872) %>% 
+    collect %>% # added to force data to R
+    nrow
+# Returns 3048
+```
+
+When you're done, it's best to close your connection.
+
+```{r}
+dbDisconnect(con)
+```
+
+There's a ton we can do with DBs and R. If you have a local DB
+built for the Wedge project, go ahead and see if you can 
+write a connection and a simple query using `dplyr` functions. 
+
+## And Now ... GBQ
+
+So, that was databases. All the code we had before basically works
+as written, except for some funky stuff like having to worry about 
+`collect`-ing the results. What about Google Big Query? 
+
+Let's connect to our GBQ instance and look at the tables
+that are available. This will spawn an authentication sequence
+through your browser, so make sure to allow "tidyverse" to 
+access what it needs. (Just accept all along the way.) 
+
+```{r}
+con <- dbConnect(
+  bigrquery::bigquery(),
+  project = "umt-msba",
+  dataset = "wedge_example"
+  )
+
+dbListTables(con)
+dbListFields(con,'product_year_month_2014')
+
+```
+
+Let's just repeat a bunch of the stuff we did above. First, 
+connections to the tables themselves. Exactly the same code.
+
+```{r}
+owner.prod.db <- tbl(con, "owner_products")
+prod.ym.db <- tbl(con,"product_year_month_2014")
+```
+
+Looking at the first six rows. 
+
+```{r}
+owner.prod.db %>% 
+    select(owner,description,dept_name,total_sales, transactions) %>% 
+    filter(100 < total_sales, total_sales < 500) %>% 
+    arrange(transactions, total_sales) %>% 
+    head
+```
+
+And the number of records for owner 12872, using the `collect` 
+function again. 
+
+```{r}
+owner.prod.db %>% 
+    filter(owner==12872) %>% 
+    collect %>% # added to force data to R
+    nrow
+# Returns 3048
+```
+
+When you're done, it's best to close your connection.
+
+```{r}
+dbDisconnect(con)
+```
+
+Now, connect to your own GBQ instance and write a query or 
+two against one of your Wedge tables. If you're feeling ambitious, 
+try to write one of the big queries from task 3. 
+
 
 
 
