small change to GBQ file

--- a/python-gbq/Python GBQ Example.ipynb
+++ b/python-gbq/Python GBQ Example.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,15 +102,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "cards = []\n",
+    "\n",
     "for idx, row in enumerate(query_job) :\n",
     "    card, sales = row\n",
-    "    print(\"Card {:.0f} spent {:,.2f} dollars.\".format(card,sales))\n",
-    "    \n",
-    "    if idx == 5 :\n",
+    "    #print(\"Card {:.0f} spent {:,.2f} dollars.\".format(card,sales))\n",
+    "    cards.append(card)\n",
+    "    if idx == 500 :\n",
     "        break"
    ]
   },
@@ -311,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
