finish of owner sample

--- a/owner_sample.ipynb
+++ b/owner_sample.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,15 +68,46 @@
    "outputs": [],
    "source": [
     "query = (\n",
-    "\n",
-    "\n",
-    ")\n",
-    "\n",
+    "    \"SELECT \"\n",
+    "    \"DISTINCT(card_no) \"\n",
+    "    \"FROM \"\n",
+    "    \"`umt-msba.wedge_example.daily_trans_*` \"\n",
+    "    \"WHERE card_no != 3.0\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# And we execute queries with `client.query`\n",
     "query_job = client.query(\n",
     "    query,\n",
     "    location=\"US\",\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_owners = []\n",
+    "\n",
+    "for row in query_job :\n",
+    "    all_owners.append(row[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(all_owners)"
    ]
   },
   {
@@ -91,7 +122,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "owner_sample = random.sample(all_owners,400)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -105,7 +138,40 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "query = (\n",
+    "    \"SELECT \"\n",
+    "    \"* \"\n",
+    "    \"FROM \"\n",
+    "    \"`umt-msba.wedge_example.daily_trans_*` \"\n",
+    "    \"WHERE \"\n",
+    "    \"card_no IN(\"\n",
+    ")\n",
+    "\n",
+    "query = query + \",\".join([str(num) for num in owner_sample]) + \")\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# And we execute queries with `client.query`\n",
+    "query_job = client.query(\n",
+    "    query,\n",
+    "    location=\"US\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_job.result()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,14 +186,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = (\n",
-    ")\n",
-    "\n",
-    "# And we execute queries with `client.query`\n",
-    "query_job = client.query(\n",
-    "    query,\n",
-    "    location=\"US\",\n",
-    ")"
+    "headers = \"\"\"datetime\tregister_no\temp_no\ttrans_no\tupc\tdescription\t\n",
+    "             trans_type\ttrans_subtype\ttrans_status\tdepartment\t\n",
+    "             quantity\tScale\tcost\tunitPrice\ttotal\t\n",
+    "             regPrice\taltPrice\ttax\ttaxexempt\tfoodstamp\t\n",
+    "             wicable\tdiscount\tmemDiscount\tdiscountable\t\n",
+    "             discounttype\tvoided\tpercentDiscount\tItemQtty\t\n",
+    "             volDiscType\tvolume\tVolSpecial\tmixMatch\t\n",
+    "             matched\tmemType\tstaff\tnumflag\titemstatus\t\n",
+    "             tenderstatus\tcharflag\tvarflag\tbatchHeaderID\t\n",
+    "             local\torganic\tdisplay\treceipt\tcard_no\tstore\t\n",
+    "             branch\tmatch_id\ttrans_id\"\"\".split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"owner_sample.txt\",'w') as ofile :\n",
+    "    ofile.write(\"\\t\".join(headers) + \"\\n\")\n",
+    "    \n",
+    "    for idx, row in enumerate(query_job) :\n",
+    "        ofile.write(\"\\t\".join([str(element) for element in row]) + \"\\n\")\n",
+    "    \n",
+    "#        if idx == 100 :\n",
+    "#            break\n"
    ]
   }
  ],
