Wedge Project Solutions

--- a/sql-and-python/SQL_and_Python_with_Functions.ipynb
+++ b/sql-and-python/SQL_and_Python_with_Functions.ipynb
@@ -156,7 +156,7 @@
     "                                       (trans_status = '' or \n",
     "                                        trans_status = ' ' or \n",
     "                                        trans_status = 'V' or \n",
-    "                                        trans_status = 'R') and card_no = 18736\n",
+    "                                        trans_status = 'R') \n",
     "                          GROUP BY card_no, department, year, month\n",
     "                          ORDER BY year, month''')"
    ]
@@ -226,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
