small change to Task 1

--- a/wedge-solution/Task1_DataProcessing.ipynb
+++ b/wedge-solution/Task1_DataProcessing.ipynb
@@ -194,10 +194,11 @@
     "\n",
     "                outfile.write(oline)\n",
     "\n",
-    "            if idx % 10000 == 0 :\n",
-    "                print(\"On line {} in {}.\".format(idx,input_file_name))\n",
+    "                if idx % 10000 == 0 :\n",
+    "                    print(\"On line {} in {}.\".format(idx,input_file_name))\n",
     "\n",
-    "                    \n",
+    "        input_file.close() \n",
+    "        \n",
     "        # The clean file is written out. Now we need to upload it to GBQ. \n",
     "        # Going to use some functions to make this a bit easier.\n",
     "        job_config = get_upload_job_config()\n",
